--- a/html5/太极图.html
+++ b/html5/太极图.html
@@ -8,12 +8,16 @@
             margin: 0;
             padding: 0;
         }
+        body{
+            background-color: darkgray;
+        }
         #d1{
             width: 800px;
             height: 800px;
-            margin: 100px auto;
-            background-color: #f7f;
+            margin: 50px auto;
+            /*background-color: #f7f;*/
             overflow: hidden;
+            transition: transform  10s;
         }
         #d2{
             float: left;
@@ -49,7 +53,7 @@
         #d6{
                       position: relative;
                       left: 100px;
-                      top: 100px;
+                      top: 130px;
                       width: 100px;
                       height: 100px;
                       background-color: #fff;
@@ -59,13 +63,17 @@
         #d7{
             position: relative;
             left: 200px;
-            top: 200px;
+            top: 170px;
             width: 100px;
             height: 100px;
             background-color: #000;
             border-radius: 50%;
+        }
+        #d1:hover{
+            transform: scale(0.5)  rotate(999deg);
 
         }
+
     </style>
 
 </head>
